# UEP-Protocol

./: README.md
uep-core/: CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
uep-core/.devcontainer/: Dockerfile  devcontainer.json
uep-core/.github/workflows/: ci.yml
uep-core/docs/: api.md  architecture.md  protocol-spec.md
uep-core/examples/multi_model/: README.md
uep-core/examples/simple_echo/: README.md
uep-core/scripts/: generate-protos.sh  start-local.sh
uep-core/src/uep_core/: __init__.py  cli.py  client.py  config.py  logging.py  server.py
uep-core/src/uep_core/adapters/: __init__.py  ai_model_adapter.py  microservice_adapter.py
uep-core/src/uep_core/core/: __init__.py  dispatcher.py  router.py
uep-core/src/uep_core/plugins/: registry.py
uep-core/src/uep_core/protocols/: __init__.py  uep.proto  uep_pb2.py  uep_pb2_grpc.py  uep_v1.proto  uep_v1.py  uep_v1_pb2.py  uep_v1_pb2_grpc.py
uep-core/src/uep_core/schemas/: __init__.py  message.py
uep-core/src/uep_core/transports/: __init__.py  grpc.py  http.py  websocket.py
uep-core/src/uep_core/utils/: helpers.py
uep-core/tests/integration/: test_end_to_end.py
uep-core/tests/unit/: test_dispatcher.py  test_transports.py
