[metadata]
name = uep-core
version = 0.1.0
description = A modular Universal Exchange Protocol (UEP) system for communication between multiple AI models and microservices.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/uep-core
license = MIT
keywords = uep, ai, microservices, communication
packages = find:
install_requires =
    grpcio
    grpcio-tools
    pytest
    pytest-asyncio
    loguru
python_requires = >=3.7

[options.packages.find]
where = src

[options]
zip_safe = false
include_package_data = true

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = *Test
python_functions = test_*